ws-slo/apps/honcho-postgres/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: honcho-postgres
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: honcho-postgres
      app.kubernetes.io/name: postgres
  serviceName: honcho-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: honcho-postgres
        app.kubernetes.io/name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: run-postgresql
              mountPath: /var/run/postgresql
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETUID
                - SETGID
                - DAC_OVERRIDE
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            failureThreshold: 180
            periodSeconds: 5
            timeoutSeconds: 5
      securityContext:
        fsGroup: 999
      volumes:
        - name: initdb
          configMap:
            name: honcho-postgres
            items:
              - key: init.sql
                path: init.sql
        - name: run-postgresql
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 4Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
